2012-12-27  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	 - Fix naming and scope of some local utility functions.

2012-12-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_get_font_style_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the "fontStyle" attribute.

2012-12-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlstate.c: (gst_ttml_state_push_attribute),
	(gst_ttml_state_pop_attribute):
	  - Better debug output.

2012-12-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_free):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_reset),
	(gst_ttml_style_free_content), (gst_ttml_style_copy),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the "fontFamily" attribute.

2012-12-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlenums.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose):
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_reset):
	* src/gstttmlstyle.h:
	  - Support for the "display" attribute.

2012-12-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_str_concat),
	(gst_ttml_style_gen_pango):
	  - Better generation of Pango markup.
